tests/semantic/constDecl_error1.expected

Semantic Error [line 3]: 
	Redeclared identifier 'size'.
