tests/semantic/constDecl_error1.mtp
(* Testing for duplicate const declarations*)
const size := 10;
      size := 2;


begin
end.